docs/apache-airflow-providers-smtp/2.0.1/_sources/_api/airflow/providers/smtp/notifications/smtp/index.rst.txt
airflow.providers.smtp.notifications.smtp
=========================================

.. py:module:: airflow.providers.smtp.notifications.smtp


Attributes
----------

.. autoapisummary::

   airflow.providers.smtp.notifications.smtp.send_smtp_notification


Classes
-------

.. autoapisummary::

   airflow.providers.smtp.notifications.smtp.SmtpNotifier


Module Contents
---------------

.. py:class:: SmtpNotifier(to, from_email = None, subject = None, html_content = None, files = None, cc = None, bcc = None, mime_subtype = 'mixed', mime_charset = 'utf-8', custom_headers = None, smtp_conn_id = SmtpHook.default_conn_name, *, template = None)

   Bases: :py:obj:`airflow.notifications.basenotifier.BaseNotifier`


   SMTP Notifier.

   Accepts keyword arguments. The only required arguments are `from_email` and `to`. Examples:

   .. code-block:: python

       EmptyOperator(task_id="task", on_failure_callback=SmtpNotifier(from_email=None, to="myemail@myemail.com"))

       EmptyOperator(
           task_id="task",
           on_failure_callback=SmtpNotifier(
               from_email="myemail@myemail.com",
               to="myemail@myemail.com",
               subject="Task {{ ti.task_id }} failed",
           ),
       )

   You can define a default template for subject and html_content in the SMTP connection configuration.

   :param smtp_conn_id: The :ref:`smtp connection id <howto/connection:smtp>`
       that contains the information used to authenticate the client.


   .. py:attribute:: template_fields
      :value: ('from_email', 'to', 'subject', 'html_content', 'files', 'cc', 'bcc', 'mime_subtype',...



   .. py:attribute:: smtp_conn_id
      :value: 'smtp_default'



   .. py:attribute:: from_email
      :value: None



   .. py:attribute:: to


   .. py:attribute:: files
      :value: None



   .. py:attribute:: cc
      :value: None



   .. py:attribute:: bcc
      :value: None



   .. py:attribute:: mime_subtype
      :value: 'mixed'



   .. py:attribute:: mime_charset
      :value: 'utf-8'



   .. py:attribute:: custom_headers
      :value: None



   .. py:attribute:: subject
      :value: None



   .. py:attribute:: html_content
      :value: None



   .. py:property:: hook
      :type: airflow.providers.smtp.hooks.smtp.SmtpHook


      Smtp Events Hook.



   .. py:method:: notify(context)

      Send a email via smtp server.



.. py:data:: send_smtp_notification

